# C

./: 10NumbersSum.c  20NumbersMulti.c  README.md  multiplication_and_division.c  sum_two.c
C-pose/: a.out  app.c  cel-to-fahr-for-statement.c  cel-to-fahr.c  file-copying-second-version.c  file-copying.c  get_char.c  main.c
Circle-and-area/: area  area.c
Digital Logic and Computer Design/: ChapTerOne.md
Fahrenheit-to-Celcius/: celcius  fah-to-cel.c
Harvard-C/: README.md  hello  hello.c  test  test.c
Marathon/: marathon  marathon.c
Mister Behnia Projects/: 10NumbersSum.c  20NumbersMulti.c  AddTime.c  AverageOfNumbers.c  BiggestAmongOthers.c  ConsoleApplication8.c  CountEvenAndOdd.c  CountTarokh.c  (+39 more)
The Linux Programming Interface/: CMakeLists.txt  FUNDAMENTALS.md  a.out  callback_example.c  sys_read.c
The Linux Programming Interface/Chapter 3/: bad_exclusive_open.c  badopen  copy  copy.c  error_functions.c  fcntl_getsettings.c  get_num.c  get_num.h  getid.c  getpid  showsetting  tlpi_hdr.h
The Linux Programming Interface/Chapter 3/headers/: ename.c.inc  error_functions.c  error_functions.h  tlpi_hdr.h
The Linux Programming Interface/Chapter 4/: seek_io.c
The Linux Programming Interface/Chapter 5/: CMakeLists.txt  a.out  duplicating_fd.c  duptest  fd_openfiles_rel.c  fd_openfiles_rel.md  getflags.c  io_spec_offset.c  mkstemp.c  p_io_test  readv_example  scatter_gather_io.c  t_readv.c  t_tempfile.c  t_truncate.c  tmpfile  truncate_example
The Linux Programming Interface/Chapter 6/: copy  copy.c  fcopy  fcopy.c  t_trunc.c  tarokhnew  trunc  truncfile
(+88 files in other folders)
